...
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/characterCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_padding_size_small"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_padding_size_medium"
                    android:layout_marginVertical="@dimen/margin_padding_size_small">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:layout_marginEnd="@dimen/margin_padding_size_small"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        app:layout_constraintEnd_toStartOf="@+id/status"
...
